# RNAScope-analysis

./: .gitignore  LICENSE  README.md  cpsam_last_paths.txt  example_draw_freehand_roi.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  visualize_roi_centers.py
results_rnascope_finetuned_epoch20/: run_settings_cellpose_finetuned.yaml
results_rnascope_finetuned_epoch20/csv/: overall_metrics_cellpose_finetuned.csv  per_nucleus_counts_cellpose_finetuned.csv  per_roi_summary_cellpose_finetuned.csv
rnascope_pipeline/: __init__.py  __main__.py  analysis.py  config.py  cpsam_finetune_gui.py  dataset_store.py  image_utils.py  pipeline.py  roi_drawer.py  segmentation.py  utils.py
